# poke_bat_public

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.dist  LICENSE  README.md  build_all.sh  build_docker_sibirctf2019_pokebat_server_dist.sh  clean_all.sh  conf.h  docker-compose.yml  docker_build.sh  main.cpp  pokebat.conf  pokebat_dist.conf
config_generation/: CMakeLists.txt  README.md  client_config_handler.cpp  client_config_handler.h  main.cpp  server_config_handler.cpp  server_config_handler.h
config_generation/src/: clientConfigHandler.cpp  clientConfigHandler.h  client_config_handler.cpp  client_config_handler.h  configHandler.cpp  configHandler.h  serverConfigHandler.cpp  serverConfigHandler.h  server_config_handler.cpp  server_config_handler.h
fhq-jury-ad-testing/: .gitignore  Dockerfile  README.md  clean.sh  docker-compose.yml  team1_poketbat.conf  team2_poketbat.conf
fhq-jury-ad-testing/jury.d/: game.conf  scoreboard.conf
fhq-jury-ad-testing/jury.d/checkers/service2/: checker.py  result.cvg_temp  service.conf  team2_service2_pokebat_server.cvg
fhq-jury-ad-testing/jury.d/checkers/service2/gen-py/interfaces/: PokServer-remote  PokServer.py  ttypes.py
fhq-jury-ad-testing/jury.d/teams/: team1.conf  team2.conf
fhq-jury-ad-testing/team1_poket_bat_config/: poketbat.conf
include/: common.h  db_conf.h  fight.h  pok_server.h  server_controller.h
middleware/: CMakeLists.txt  README.md  client_controller.cpp  client_controller.h  interfaces.thrift  main.cpp  pok_server.cpp  pok_server.h  server_controller.cpp  server_controller.h  utilities.cpp  utilities.h
middleware/gen-cpp/: MultiplicationService.cpp  MultiplicationService.h  MultiplicationService_server.skeleton.cpp  interfaces_constants.cpp  interfaces_constants.h  interfaces_types.cpp  interfaces_types.h
mysql-connector/: CMakeLists.txt  build_all.sh
pokebat_config_parser/: CMakeLists.txt  config_parser.cpp  config_parser.h  main.cpp
src/: client.cpp  fight.cpp  main.cpp  pok_server.cpp  server.cpp  server_controller.cpp
work_with_database/: CMakeLists.txt  build_this.sh  database_manager.cpp  database_manager.h  main.cpp
